NDD-1160: fix overflow issue with container on quick links.

--- a/docroot/profiles/custom/webny/themes/custom/webny_theme/sass/components/_quick_links.scss
+++ b/docroot/profiles/custom/webny/themes/custom/webny_theme/sass/components/_quick_links.scss
@@ -40,6 +40,7 @@ $ql-button-hover-back-color:       $button-black-50 !default;
 .qlframe-inner {
   max-width: $max-pc;
   margin: 0 auto;
+  overflow: auto;
 }
 
 .ql--group-1 {
